# Pasqal_Hackathon_Feb25_Team_11

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
code/: utils.py
code/conv_lstm/: config.json  losses.py  model.py  train.py  utils.py
code/conv_lstm/data/: tiff.py
code/conv_lstm/dataloader/: FireSpreadDataModule.py  FireSpreadDataset.py  utils.py
code/conv_lstm/inference/: predict.py
code/conv_lstm/runs/run_0/: 0.pth  1.pth  2.pth  3.pth  best.pth  config.json
code/conv_lstm/runs/run_1/: 0.pth  1.pth  2.pth  3.pth  4.pth  5.pth  6.pth  best.pth  config.json  last.pth
code/conv_lstm/runs/run_13/: 0.pth  1.pth  10.pth  11.pth  12.pth  13.pth  14.pth  15.pth  16.pth  17.pth  18.pth  2.pth  3.pth  4.pth  5.pth  6.pth  7.pth  8.pth  9.pth  best.pth  config.json  last.pth  losses.csv
code/conv_lstm/runs/run_2/: 0.pth  1.pth  2.pth  3.pth  4.pth  5.pth  (+4 more)
code/conv_lstm/visualization/: plot_predictions.py  plot_predictions_loop.py
code/misc/pulser_tutorials/: registers.ipynb
code/misc/variational_quantum_algorithms/: custom_quantum_models.ipynb  data_and_configs.ipynb  training.ipynb
code/qubo/: functions.py  utils.py
data/: CreateHDF5Dataset.py
data/sample_source_dataset/fire_21458801/: 2018-01-25.tif  2018-01-26.tif  2018-01-27.tif  2018-01-28.tif  2018-01-29.tif  2018-01-30.tif  2018-01-31.tif  2018-02-01.tif  2018-02-02.tif  2018-02-03.tif  2018-02-04.tif
docs/: docs.md  optim.py
tests/: QAA_tuto.ipynb  QuRAWC_tuto.ipynb  QuRAWC_tutto.ipynb  conv_lstm.ipynb  mwe_flow.ipynb  quantec.ipynb  qubo.ipynb
